ingress-paths-do.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-paths
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
    - host: k8s.sikademo.com
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
